kubernetes/epm-dep-fe.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: fe
  labels:
    app  : fe
    env  : prod
    owner: RomanGorokhovsky
spec:
#replicas: 2
  selector:
    matchLabels:
      project: Epam
  template:
    metadata:
      labels:
        project: Epam
    spec:
      containers:
        - name : fe
          image: madmongoose/fe:latest
          ports:
            - containerPort: 8501
