kubernetes/epm-dmt-api.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: epm-dmt-api
  labels:
    app  : epm-dmt-api
    env  : prod
    owner: RomanGorokhovsky
spec:
#replicas: 2
  selector:
    matchLabels:
      project: Epam
  template:
    metadata:
      labels:
        project: Epam
    spec:
      containers:
        - name : api
          image: madmongoose/api:latest
          ports:
            - containerPort: 5000
